tests/baselines/reference/prettyContextNotDebugAssertion.errors.txt
[91m● [0m[96mtests/cases/compiler/index.ts[0m:[93m2[0m:[93m1[0m  [91mError[0m TS1005
| 
  [91m[0m
'}' expected.

The parser expected to find a '}' to match the '{' token here. [96mtests/cases/compiler/index.ts[0m:[93m1[0m:[93m11[0m

  | if (true) {
    [96m          ▔[0m

==== tests/cases/compiler/index.ts (1 errors) ====
    if (true) {
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 tests/cases/compiler/index.ts:1:11: The parser expected to find a '}' to match the '{' token here.
Found 1 error in tests/cases/compiler/index.ts[90m:2[0m

